[project]
name = "pykunai"
version = "0.1.2"
description = "Python library and tools to work with Kunai"
readme = "README.md"
authors = [{ name = "qjerome", email = "quentin.jerome@circl.lu" }]
requires-python = ">=3.7"
dependencies = ["pymisp", "toml", "graphviz"]

[project.scripts]
misp-to-kunai = "pykunai.tools.misp_to_kunai:main"
kunai-to-misp = "pykunai.tools.kunai_to_misp:main"
kunai-graph = "pykunai.tools.kunai_graph:main"
kunai-search = "pykunai.tools.search:main"
kunai-iocgen = "pykunai.tools.iocgen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
